SCB-1597 Clean up the code of acceptance-tests